Comment env variable for keys

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,19 +17,22 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: czardom_development_1
+  database: czardom_development
   pool: 5
-  username: czardom
-  password:
+  host: localhost
+  port: 5432
+  username: postgres
+  password: 12345678
 
-  # Connect on a TCP socket. Omitted by default since the client uses a
-  # domain socket that doesn't need configuration. Windows does not have
-  # domain sockets, so uncomment these lines.
-  #host: localhost
-
-  # The TCP port the server listens on. Defaults to 5432.
-  # If your server runs on a different port number, change accordingly.
-  #port: 5432
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: czardom
+  pool: 5
+  host: localhost
+  port: 5432
+  username: postgres
+  password: 12345678
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
